# paint-clone

./: README.md  main.py  pyproject.toml
